Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm
@@ -75,6 +75,7 @@
 #import <WebCore/LookupSPI.h>
 #import <WebCore/NSApplicationSPI.h>
 #import <WebCore/NSImmediateActionGestureRecognizerSPI.h>
+#import <WebCore/NSSpellCheckerSPI.h>
 #import <WebCore/NSTextFinderSPI.h>
 #import <WebCore/NSWindowSPI.h>
 #import <WebCore/PlatformEventFactoryMac.h>
@@ -1723,6 +1724,10 @@ void WebViewImpl::centerSelectionInVisibleArea()
 void WebViewImpl::selectionDidChange()
 {
     updateFontPanelIfNeeded();
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+    if (!m_page->editorState().isMissingPostLayoutData)
+        requestCandidatesForSelectionIfNeeded();
+#endif
 }
 
 void WebViewImpl::startObservingFontPanel()
@@ -2087,6 +2092,103 @@ void WebViewImpl::capitalizeWord()
 {
     m_page->capitalizeWord();
 }
+
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+void WebViewImpl::requestCandidatesForSelectionIfNeeded()
+{
+    const EditorState& editorState = m_page->editorState();
+    if (!editorState.isContentEditable)
+        return;
+
+    if (editorState.isMissingPostLayoutData)
+        return;
+
+    auto& postLayoutData = editorState.postLayoutData();
+    m_lastStringForCandidateRequest = postLayoutData.stringForCandidateRequest;
+
+    NSRange rangeForCandidates = NSMakeRange(postLayoutData.candidateRequestStartPosition, postLayoutData.selectedTextLength);
+    NSTextCheckingTypes checkingTypes = NSTextCheckingTypeSpelling | NSTextCheckingTypeReplacement | NSTextCheckingTypeCorrection;
+    auto weakThis = createWeakPtr();
+    [[NSSpellChecker sharedSpellChecker] requestCandidatesForSelectedRange:rangeForCandidates inString:postLayoutData.paragraphContextForCandidateRequest types:checkingTypes options:nil inSpellDocumentWithTag:spellCheckerDocumentTag() completionHandler:[weakThis](NSInteger sequenceNumber, NSArray<NSTextCheckingResult *> *candidates) {
+        dispatch_async(dispatch_get_main_queue(), ^{
+            if (!weakThis)
+                return;
+            weakThis->handleRequestedCandidates(sequenceNumber, candidates);
+        });
+    }];
+}
+
+void WebViewImpl::handleRequestedCandidates(NSInteger sequenceNumber, NSArray<NSTextCheckingResult *> *candidates)
+{
+    const EditorState& editorState = m_page->editorState();
+    if (!editorState.isContentEditable)
+        return;
+
+    // FIXME: It's pretty lame that we have to depend on the most recent EditorState having post layout data,
+    // and that we just bail if it is missing.
+    if (editorState.isMissingPostLayoutData)
+        return;
+
+    auto& postLayoutData = editorState.postLayoutData();
+    if (m_lastStringForCandidateRequest != postLayoutData.stringForCandidateRequest)
+        return;
+
+    auto weakThis = createWeakPtr();
+    [[NSSpellChecker sharedSpellChecker] showCandidates:candidates forString:postLayoutData.stringForCandidateRequest inRect:postLayoutData.selectionClipRect view:m_view completionHandler:[weakThis](NSTextCheckingResult *acceptedCandidate) {
+        dispatch_async(dispatch_get_main_queue(), ^{
+            if (!weakThis)
+                return;
+            weakThis->handleAcceptedCandidate(acceptedCandidate);
+        });
+    }];
+}
+
+static WebCore::TextCheckingResult textCheckingResultFromNSTextCheckingResult(NSTextCheckingResult *nsResult)
+{
+    WebCore::TextCheckingResult result;
+
+    // FIXME: Right now we only request candidates for spelling, replacement, and correction, but we plan to
+    // support more types, and we will have to update this at that time.
+    switch ([nsResult resultType]) {
+    case NSTextCheckingTypeSpelling:
+        result.type = WebCore::TextCheckingTypeSpelling;
+        break;
+    case NSTextCheckingTypeReplacement:
+        result.type = WebCore::TextCheckingTypeReplacement;
+        break;
+    case NSTextCheckingTypeCorrection:
+        result.type = WebCore::TextCheckingTypeCorrection;
+        break;
+    default:
+        result.type = WebCore::TextCheckingTypeNone;
+    }
+
+    NSRange resultRange = [nsResult range];
+    result.location = resultRange.location;
+    result.length = resultRange.length;
+    result.replacement = [nsResult replacementString];
+
+    return result;
+}
+
+void WebViewImpl::handleAcceptedCandidate(NSTextCheckingResult *acceptedCandidate)
+{
+    const EditorState& editorState = m_page->editorState();
+    if (!editorState.isContentEditable)
+        return;
+
+    // FIXME: It's pretty lame that we have to depend on the most recent EditorState having post layout data,
+    // and that we just bail if it is missing.
+    if (editorState.isMissingPostLayoutData)
+        return;
+
+    auto& postLayoutData = editorState.postLayoutData();
+    if (m_lastStringForCandidateRequest != postLayoutData.stringForCandidateRequest)
+        return;
+
+    m_page->handleAcceptedCandidate(textCheckingResultFromNSTextCheckingResult(acceptedCandidate));
+}
+#endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
 
 void WebViewImpl::preferencesDidChange()
 {
